sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/Stores_List_View_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>LEM-1158: This configuration will be used for storesOnWorkPlan LWC to store sequence, section name, object name &amp; list of fields to be displayed in &quot;Onboarding Details&quot; on Work Plan</description>
    <label>Onboarding Details Configuration</label>
    <pluralLabel>Onboarding Details Configurations</pluralLabel>
</CustomObject>