sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/fields/Applicable_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Account_Record_Type__c</fullName>
    <description>LEM-2516: It indicates the record type of Account for which the section is applicable on onboarding details.</description>
    <label>Applicable Account Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
                <default>true</default>
                <label>Business</label>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>