sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/fields/FieldSet_Name__c.field-meta.xml
<CustomField>
    <fullName>FieldSet_Name__c</fullName>
    <description>LEM-1397: Indicates the fields set name which will be used to display the fields on UI.</description>
    <label>FieldSet Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>