sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-4892: It indicates whether Onboarding Details Configuration is active. The system only picks the active configurations for Onboarding Details.</description>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>