sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>LEM-1158: Indicates the object name.</description>
    <label>Object Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>