sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <description>LEM-1158: Indicates the section name of the section.</description>
    <label>Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>