sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/fields/Section_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Section_Sequence__c</fullName>
    <description>LEM-1397: Indicates the sequence of the section to allow sorting of the section.</description>
    <label>Section Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>