sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>LEM-1158: Indicates the sequence of the section.
        LEM-1397: Deprecated field after updating the field type with Number.
    </description>
    <label>Sequence (Deprecated)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>