sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/fields/Show_Section_Header__c.field-meta.xml
<CustomField>
    <fullName>Show_Section_Header__c</fullName>
    <defaultValue>true</defaultValue>
    <description>LEM-2198: It indicates whether section header will be visible on the onboarding details.</description>
    <label>Show Section Header</label>
    <type>Checkbox</type>
</CustomField>