sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-1158: Indicates the type of WorkPlan on which section should be visible.</description>
    <inlineHelpText>Indicates WorkPlan Type</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>