sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/fields/Types_To_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Types_To_Exclude__c</fullName>
    <description>LEM-3096: It indicates the types of Work Plan on which the section should not be visible.</description>
    <inlineHelpText>Indicates WorkPlan types to exclude.</inlineHelpText>
    <label>Types To Exclude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>