sfdx-source/force-app/main/default/objects/Stores_List_View_Configuration__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>MasterLabel</columns>
    <columns>Section_Sequence__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>FieldSet_Name__c</columns>
    <columns>Applicable_Account_Record_Type__c</columns>
    <columns>Types_To_Exclude__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
</ListView>